tests/ui/type/pattern_types/derives_fail.stderr
error[E0369]: binary operation `==` cannot be applied to type `(i32) is 0..=999999999`
  --> $DIR/derives_fail.rs:11:20
   |
LL | #[derive(Clone, Copy, PartialEq, Eq, Debug, Ord, PartialOrd, Hash, Default)]
   |                       --------- in this derive macro expansion
LL | #[repr(transparent)]
LL | struct Nanoseconds(NanoI32);
   |                    ^^^^^^^

error[E0277]: the trait bound `(i32) is 0..=999999999: Eq` is not satisfied
  --> $DIR/derives_fail.rs:11:20
   |
LL | #[derive(Clone, Copy, PartialEq, Eq, Debug, Ord, PartialOrd, Hash, Default)]
   |                                  -- in this derive macro expansion
LL | #[repr(transparent)]
LL | struct Nanoseconds(NanoI32);
   |                    ^^^^^^^ the trait `Eq` is not implemented for `(i32) is 0..=999999999`
   |
note: required by a bound in `AssertParamIsEq`
  --> $SRC_DIR/core/src/cmp.rs:LL:COL

error[E0277]: `(i32) is 0..=999999999` doesn't implement `Debug`
  --> $DIR/derives_fail.rs:11:20
   |
LL | #[derive(Clone, Copy, PartialEq, Eq, Debug, Ord, PartialOrd, Hash, Default)]
   |                                      ----- in this derive macro expansion
LL | #[repr(transparent)]
LL | struct Nanoseconds(NanoI32);
   |                    ^^^^^^^ the trait `Debug` is not implemented for `(i32) is 0..=999999999`

error[E0277]: the trait bound `(i32) is 0..=999999999: Ord` is not satisfied
  --> $DIR/derives_fail.rs:11:20
   |
LL | #[derive(Clone, Copy, PartialEq, Eq, Debug, Ord, PartialOrd, Hash, Default)]
   |                                             --- in this derive macro expansion
LL | #[repr(transparent)]
LL | struct Nanoseconds(NanoI32);
   |                    ^^^^^^^ the trait `Ord` is not implemented for `(i32) is 0..=999999999`

error[E0277]: can't compare `(i32) is 0..=999999999` with `_`
  --> $DIR/derives_fail.rs:11:20
   |
LL | #[derive(Clone, Copy, PartialEq, Eq, Debug, Ord, PartialOrd, Hash, Default)]
   |                                                  ---------- in this derive macro expansion
LL | #[repr(transparent)]
LL | struct Nanoseconds(NanoI32);
   |                    ^^^^^^^ no implementation for `(i32) is 0..=999999999 < _` and `(i32) is 0..=999999999 > _`
   |
   = help: the trait `PartialOrd<_>` is not implemented for `(i32) is 0..=999999999`

error[E0277]: the trait bound `(i32) is 0..=999999999: Hash` is not satisfied
  --> $DIR/derives_fail.rs:11:20
   |
LL | #[derive(Clone, Copy, PartialEq, Eq, Debug, Ord, PartialOrd, Hash, Default)]
   |                                                              ---- in this derive macro expansion
LL | #[repr(transparent)]
LL | struct Nanoseconds(NanoI32);
   |                    ^^^^^^^ the trait `Hash` is not implemented for `(i32) is 0..=999999999`

error[E0277]: the trait bound `(i32) is 0..=999999999: Default` is not satisfied
  --> $DIR/derives_fail.rs:11:20
   |
LL | #[derive(Clone, Copy, PartialEq, Eq, Debug, Ord, PartialOrd, Hash, Default)]
   |                                                                    ------- in this derive macro expansion
LL | #[repr(transparent)]
LL | struct Nanoseconds(NanoI32);
   |                    ^^^^^^^ the trait `Default` is not implemented for `(i32) is 0..=999999999`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0369.
For more information about an error, try `rustc --explain E0277`.
